# MHD2D

./: CMakeLists.txt  CMakeLists_old.txt
src/MHDsolver/: GPUFunctions.cu  GPUFunctions.cuh  MHDSolver1D.cpp  MHDSolver1D.h  MHDSolver2D.cpp  MHDSolver2D.h  MHDgpu.cu  MHDgpu.cuh  solver.cpp
src/geometry/: NetGeometry.cpp  NetGeometry.h  geometryTests.h  worldGen.cpp
src/include/json/: json.h  jsoncpp.cpp
src/include/service/: FileIO.h  LinOp.h
src/include/utility/: utility.cpp  utility.h
